[gd_scene load_steps=5 format=3 uid="uid://b3w1sr5xwqypq"]

[ext_resource type="Script" path="res://Code/BattleGeneration.gd" id="1_4d0ri"]
[ext_resource type="Script" path="res://Code/Attack_button.gd" id="2_fufu5"]
[ext_resource type="PackedScene" uid="uid://clpb06642xfgd" path="res://Scenes/Littlebuddy.tscn" id="3_dbacy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g3h3d"]

[node name="Background" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_g3h3d")
script = ExtResource("1_4d0ri")

[node name="Attack" type="Button" parent="."]
texture_filter = 1
texture_repeat = 1
offset_left = -22.0
offset_top = 8.0
offset_right = 22.0
offset_bottom = 39.0
text = "fight
"
script = ExtResource("2_fufu5")

[node name="atk1" type="Button" parent="Attack"]
visible = false
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = -43.0
offset_right = -7.0
offset_bottom = 31.0
text = "1"

[node name="atk2" type="Button" parent="Attack"]
visible = false
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 50.0
offset_right = 86.0
offset_bottom = 31.0
text = "2"

[node name="atk3" type="Button" parent="Attack"]
visible = false
texture_filter = 1
texture_repeat = 1
layout_mode = 0
offset_left = 4.0
offset_top = -36.0
offset_right = 40.0
offset_bottom = -5.0
text = "3"

[node name="Litlle buddy" parent="." instance=ExtResource("3_dbacy")]
position = Vector2(-48, -12)

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="pressed" from="Attack" to="Attack" method="_on_pressed"]
[connection signal="pressed" from="Attack/atk1" to="Attack" method="_on_atk_1_pressed"]
[connection signal="pressed" from="Attack/atk2" to="Attack" method="_on_atk_2_pressed"]
[connection signal="pressed" from="Attack/atk3" to="Attack" method="_on_atk_3_pressed"]
